# Solana-Data-Storage-Program

./: README.md
program/: Cargo.toml
program/src/: lib.rs
program/tests/: test.rs
testCodecs/: getCodecs.mts  getIxs.mts  package-lock.json  package.json  test.mts
testCodecs/accounts/: dataStorageProgram_keypair.json  userAccount.json
