[package]
name = "data_storage"
version = "0.1.0"
edition = "2021"
authors = [ "PooriaGG" ]
description = "Store arbitrary on-chain data using PDAs ."
license = "GPL-3.0"

[features]
test-sbf = []
no-entrypoint = []

[dependencies]
solana-program = "=2.1.15"
thiserror = "2.0.12"

[dev-dependencies]
solana-program-test = "=2.1.15"
solana-sdk = "=2.1.15"
arrayref = "0.3.9"

[lib]
name = "data_storage"
crate-type = [ "cdylib", "lib" ]
